force-app/main/default/objects/Grille_de_tarif__c/Grille_de_tarif__c.object-meta.xml
<CustomObject>
    <label>Grille de tarif</label>
    <nameField>
        <label>Nom de Grille de tarif</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grilles de tarif</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>