force-app/main/default/objects/Grille_de_tarif__c/fields/CodeGrilleTarif__c.field-meta.xml
<CustomField>
    <fullName>CodeGrilleTarif__c</fullName>
    <label>Code Grille Tarif</label>
    <length>10</length>
    <type>Text</type>
</CustomField>