force-app/main/default/objects/Grille_de_tarif__c/fields/Date_fin_validite__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_validite__c</fullName>
    <label>Date de fin de validité</label>
    <type>Date</type>
</CustomField>