force-app/main/default/objects/Grille_de_tarif__c/fields/Datedapplication__c.field-meta.xml
<CustomField>
    <fullName>Datedapplication__c</fullName>
    <label>Date d&apos;application</label>
    <type>Date</type>
</CustomField>