force-app/main/default/objects/Grille_de_tarif__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>