force-app/main/default/objects/Grille_de_tarif__c/fields/IDtiers__c.field-meta.xml
<CustomField>
    <fullName>IDtiers__c</fullName>
    <description>ID externe</description>
    <externalId>true</externalId>
    <label>ID tiers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>