force-app/main/default/objects/Grille_de_tarif__c/fields/Prix1vantail__c.field-meta.xml
<CustomField>
    <fullName>Prix1vantail__c</fullName>
    <description>Prix pour 1 vantail
GC_grprixdim.gri_px1vt</description>
    <label>Prix 1 vantail</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>