force-app/main/default/objects/Grille_de_tarif__c/fields/Prix2vantaux__c.field-meta.xml
<CustomField>
    <fullName>Prix2vantaux__c</fullName>
    <description>Prix pour 2 vantaux
GC_grprixdim.gri_px2vt</description>
    <label>Prix 2 vantaux</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>