force-app/main/default/objects/Grille_de_tarif__c/fields/Prix3vantaux__c.field-meta.xml
<CustomField>
    <fullName>Prix3vantaux__c</fullName>
    <description>Prix pour 3 vantaux
GC_grprixdim.gri_px3vt</description>
    <label>Prix 3 vantaux</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>