force-app/main/default/objects/Grille_de_tarif__c/fields/Prix4vantaux__c.field-meta.xml
<CustomField>
    <fullName>Prix4vantaux__c</fullName>
    <description>Prix pour 4 vantaux
GC_grprixdim.gri_px4vt</description>
    <label>Prix 4 vantaux</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>