force-app/main/default/objects/Grille_de_tarif__c/listViews/CORRECTION_VB_29042014.listView-meta.xml
<ListView>
    <fullName>CORRECTION_VB_29042014</fullName>
    <columns>NAME</columns>
    <columns>Prix1vantail__c</columns>
    <columns>Prix2vantaux__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>1/1/2015 12:00 AM</value>
    </filters>
    <label>CORRECTION VB 29042014</label>
    <language>fr</language>
</ListView>