force-app/main/default/objects/Grille_de_tarif__c/listViews/CORRECTIONS_12_09.listView-meta.xml
<ListView>
    <fullName>CORRECTIONS_12_09</fullName>
    <columns>NAME</columns>
    <columns>CodeGrilleTarif__c</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/12/2014 12:00 AM</value>
    </filters>
    <label>CORRECTIONS 12/09</label>
    <language>fr</language>
</ListView>