force-app/main/default/objects/Grille_de_tarif__c/listViews/DEMPL.listView-meta.xml
<ListView>
    <fullName>DEMPL</fullName>
    <columns>NAME</columns>
    <columns>CodeGrilleTarif__c</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <columns>Dimension__c</columns>
    <columns>Prix1vantail__c</columns>
    <columns>Prix2vantaux__c</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeGrilleTarif__c</field>
        <operation>equals</operation>
        <value>DEMPL</value>
    </filters>
    <label>DEMPLE</label>
    <language>fr</language>
</ListView>