force-app/main/default/objects/Grille_de_tarif__c/listViews/DEPLOIEEMNT_04112016.listView-meta.xml
<ListView>
    <fullName>DEPLOIEEMNT_04112016</fullName>
    <columns>NAME</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <columns>Dimension__c</columns>
    <columns>Prix1vantail__c</columns>
    <columns>Prix2vantaux__c</columns>
    <columns>Prix3vantaux__c</columns>
    <columns>Prix4vantaux__c</columns>
    <columns>Prix5vantaux__c</columns>
    <columns>Prix6vantaux__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/4/2016 12:00 AM</value>
    </filters>
    <label>DEPLOIEMENT DU 04/11/2016</label>
    <language>fr</language>
</ListView>