force-app/main/default/objects/Grille_de_tarif__c/listViews/DEPLOIEEMNT_29092015.listView-meta.xml
<ListView>
    <fullName>DEPLOIEEMNT_29092015</fullName>
    <columns>NAME</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <columns>Dimension__c</columns>
    <columns>Prix1vantail__c</columns>
    <columns>Prix2vantaux__c</columns>
    <columns>Prix3vantaux__c</columns>
    <columns>Prix4vantaux__c</columns>
    <columns>Prix5vantaux__c</columns>
    <columns>Prix6vantaux__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>9/29/2015 12:00 AM</value>
    </filters>
    <label>DEPLOIEMENT DU 29/09/2015</label>
    <language>fr</language>
</ListView>