force-app/main/default/objects/Grille_de_tarif__c/listViews/forfaits_chantier.listView-meta.xml
<ListView>
    <fullName>forfaits_chantier</fullName>
    <columns>NAME</columns>
    <columns>CodeGrilleTarif__c</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <columns>Prix1vantail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeGrilleTarif__c</field>
        <operation>contains</operation>
        <value>FORF</value>
    </filters>
    <label>Forfaits chantier</label>
</ListView>