force-app/main/default/objects/Grille_de_tarif__c/listViews/GRILLES_RECENTES.listView-meta.xml
<ListView>
    <fullName>GRILLES_RECENTES</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>GRILLES RECENTES</label>
</ListView>