force-app/main/default/objects/Grille_de_tarif__c/listViews/MAJ_03_07_2013.listView-meta.xml
<ListView>
    <fullName>MAJ_03_07_2013</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>7/3/2013 12:00 AM</value>
    </filters>
    <label>MAJ 03-07-2013</label>
    <language>fr</language>
</ListView>