force-app/main/default/objects/Grille_de_tarif__c/listViews/MAJ_15062021.listView-meta.xml
<ListView>
    <fullName>MAJ_15062021</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Datedapplication__c</field>
        <operation>equals</operation>
        <value>6/15/2021</value>
    </filters>
    <label>MAJ_15062021</label>
</ListView>