force-app/main/default/objects/Grille_de_tarif__c/listViews/MAJ_TARIF_27_JANVIER_2015.listView-meta.xml
<ListView>
    <fullName>MAJ_TARIF_27_JANVIER_2015</fullName>
    <columns>NAME</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <columns>Dimension__c</columns>
    <columns>Prix1vantail__c</columns>
    <columns>Prix2vantaux__c</columns>
    <columns>Prix3vantaux__c</columns>
    <columns>Prix4vantaux__c</columns>
    <columns>Prix5vantaux__c</columns>
    <columns>Prix6vantaux__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>1/27/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>CodeGrilleTarif__c</field>
        <operation>equals</operation>
        <value>PRIXPFEECO</value>
    </filters>
    <label>MAJ TARIF JANVIER 2015</label>
    <language>fr</language>
</ListView>