force-app/main/default/objects/Grille_de_tarif__c/listViews/rech_par_grille.listView-meta.xml
<ListView>
    <fullName>rech_par_grille</fullName>
    <columns>NAME</columns>
    <columns>CodeGrilleTarif__c</columns>
    <columns>Datedapplication__c</columns>
    <columns>Date_fin_validite__c</columns>
    <columns>Dimension__c</columns>
    <columns>Prix1vantail__c</columns>
    <columns>Prix2vantaux__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeGrilleTarif__c</field>
        <operation>contains</operation>
        <value>DEROCHE</value>
    </filters>
    <label>Recherche par grille</label>
</ListView>